--- a/css/m_detail_hongbao.css
+++ b/css/m_detail_hongbao.css
@@ -17,7 +17,7 @@ img {
 	border-bottom: 1px solid #e9e8e8;
 	background: #fff;
 }
-/*体验步骤部分*/
+/*ä½“éªŒæ­¥éª¤éƒ¨åˆ†*/
 .taste,
 .prompt {
 	padding: 0 1.875% 0;
@@ -25,20 +25,14 @@ img {
 }
 .taste h3, .prompt h3 {
 	margin-top: 1rem;
-	padding-left: 2.6rem;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 	color: #008fd7;
 	font-size: 1.6rem;
-	/*line-height: 5rem;;*/
 }
-.taste h3{
-	background: url(../images/task-04.png) left center no-repeat;
-	background-size: 2rem; auto;
-}
-.prompt h3 {
-	background: url(../images/task-05.png) left center no-repeat;
-	background-size: 2rem; auto;
+.mui-content .iconfont {
+	font-size: 2rem;
+	margin-right: 0.4rem;
 }
 .taste h4 {
 	margin-top: 1rem;
@@ -46,10 +40,7 @@ img {
 	font-size: 1.4rem;
 	line-height: 3rem;
 }
-/*.taste p, .prompt p {
-	font-size: 1.2rem;
-	line-height: 1.8rem;
-}*/
+
 .prompt .contact {
 	margin-top: 2rem;
 }
@@ -59,7 +50,7 @@ img {
 	line-height: 2rem;;
 }
 
-/*立即体验部分*/
+/*ç«‹å³ä½“éªŒéƒ¨åˆ†*/
 .try {
 	position: fixed;
 	bottom: 0;
@@ -89,7 +80,7 @@ img {
 	padding: 0;
 }
 
-/*弹出层部分*/
+/*å¼¹å‡ºå±‚éƒ¨åˆ†*/
 .er-wei-ma {
 	position: fixed;
 	top: 0;
@@ -127,9 +118,9 @@ img {
 .er-wei-ma span:active {
 	color: #ff6767;
 }
-/*上传样式设置*/
+/*ä¸Šä¼ æ ·å¼è®¾ç½®*/
 p {
-	font-family: "微软雅黑";
+	font-family: "å¾®è½¯é›…é»‘";
 	font-size: 16px !important;
 	line-height: 2;
 	color: #333;
