--- a/css/m_account_invite.css
+++ b/css/m_account_invite.css
@@ -3,7 +3,7 @@ body {
 }
 .mui-content {
 	background: #fee101;
-	font-family: "huakangshaonvW5(P)";
+	font-family: "华康少女文字W5(P)";
 }
 .mui-content p {
 	font-size: 1.4rem;
