--- a/css/m_account_score.css
+++ b/css/m_account_score.css
@@ -81,27 +81,7 @@ body {
 .box-01 .mui-table-view li span {
 	width: 33.3333%;
 }
-/*样式替换*/
-.pay-in {
-	background: url(../images/jf-in-01.png) 3.6rem center no-repeat;
-	background-size: 16% auto;
-	padding-left: 3.6rem;
-}
-.pay-out {
-	background: url(../images/jf-out-01.png) 3.6rem center no-repeat;
-	background-size: 16% auto;
-	padding-left: 3.6rem;
-}
-.pay-in.mui-active {
-	background: url(../images/jf-in-02.png) 3.6rem center no-repeat;
-	background-size: 16% auto;
-	padding-left: 3.6rem;
-}
-.pay-out.mui-active {
-	background: url(../images/jf-out-02.png) 3.6rem center no-repeat;
-	background-size: 16% auto;
-	padding-left: 3.6rem;
-}
+
 /*修改部分*/
 .tab-head {
 	margin: 2rem 0 1rem;
@@ -110,20 +90,23 @@ body {
 	color: #333;
 	font-size: 2rem;
 	float: left;
-	/*line-height: 4rem;*/
 }
 .tab-head>a {
+	position: relative;
 	display: block;
-	padding-left: 2.4rem;
 	margin-top: 1rem;
 	font-size: 1rem;
-	/*line-height: 5rem;*/
 	float: right;
-	background: url(../images/qiehuan-icon.png) left center no-repeat;
-	background-size: 1.6rem auto;
+}
+.tab-head>a i {
+	position: absolute;
+	right: 7rem;
+	top: -0.4rem;
+	margin-right: 1rem;
+	font-size: 2rem;
 }
 .mui-bar-nav~.mui-content .mui-slider.mui-fullscreen {
-	top: 23rem;
+	top: 23.6rem;
 }
 .mui-fullscreen .mui-segmented-control~.mui-slider-group {
 	top:0px;
