--- a/css/m_get_coupon_success.css
+++ b/css/m_get_coupon_success.css
@@ -56,6 +56,9 @@ body {
 	font-size: 2rem;
 	line-height: 7.4rem;
 	height: 7.4rem;
+  white-space: nowrap;
+	text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .btn {
