--- a/css/m_detail_task.css
+++ b/css/m_detail_task.css
@@ -119,9 +119,9 @@ p a {
 .left-btn button {
 	border-right: none;
 }
-/*.mui-btn-blue:enabled:active,
-.mui-btn-blue.mui-active:enabled {
-	color: #fff;
-	border: 1px solid #008fd7;
-	background-color: #008fd7;*/
+.mui-popup-title {
+	display: block;
+}
+.mui-popup-title+.mui-popup-text {
+	text-align: left;
 }
