--- a/css/m_finance.css
+++ b/css/m_finance.css
@@ -82,13 +82,13 @@ header a img {
 
 .container .inc2 {
 	float: right;
-	width:auto;
+	width:13rem;
 	height: auto;
-	margin-top: 0.4rem;
+	/*margin-top: 0.4rem;*/
 }
 .container .inc2 p {
 	font-size: 1.2rem;
-	line-height: 2.4rem;
+	line-height: 2.2rem;
 }
 .container .inc2 p:first-child {
 	color: #f08519;
@@ -106,16 +106,30 @@ footer li {
 	width: 25%;
 	float: left;
 }
-footer li img {
-	width: 2.8rem;
-	height: auto;
+footer .iconfont {
+	font-size: 2.4rem;
+	line-height: 3rem;
+	color: #8f8f8f;
+}
+footer li:first-child .iconfont {
+	position: relative;
+	font-size: 2.2rem;
+	top: 0.2rem;
+}
+footer li:last-child .iconfont {
+	position: relative;
+	top: 0.2rem;
+	font-size: 2.8rem;
+}
+.on .iconfont {
+	color: #f08519;
 }
 footer li span {
 	display: block;
 	font-size: 1rem;
 	color: #4d4d4d;
 	margin-bottom: 3px;
-	margin-top: -3px;
+	margin-top: 3px;
 }
 footer li.on span {
 	color: #f08519;
