--- a/css/m_hongbao.css
+++ b/css/m_hongbao.css
@@ -109,7 +109,7 @@ body {
 	border: 1px solid #e4e4e4;
 }
 .mui-table-view-cell .li-info {
-	width: 15rem;
+	width: 15.8rem;
 	float: right;
 	height: auto;
 }
@@ -122,7 +122,7 @@ body {
 	overflow: hidden;
 }
 .li-info p {
-	line-height: 1.8rem;
+	line-height: 1.6rem;
 }
 .li-info p.first {
 	height: 1.8rem;
@@ -134,18 +134,16 @@ body {
 	color: #ff6767;
 	margin: 0.6rem 1rem 0 0;
 	font-size: 0.8rem;
-	line-height: 1rem;
+	line-height: 1.2rem;
 	text-align: center;
 	border: 1px solid #fb3456;
 	border-radius: 4px;
 }
 .li-info span {
-	font-size: 1rem;
-
-	padding-left: 1.6rem;
+	position: relative;
 	display: inline-block;
-	/*line-height: 2rem;*/
-	/*color: #8f8f8f;*/
+	padding-left: 1.6rem;
+	font-size: 1rem;
 }
 
 .li-info .s2,
@@ -155,18 +153,36 @@ body {
 }
 .li-info .s3 {
 	float: left;
-	width: 10.5rem;
+	width: 12rem;
 }
 .li-info .s2 {
 	float: left;
 }
 .li-info .s1 {
-	margin-top: 0.5rem;
-	background:url(../images/s1.png) left center no-repeat; background-size:1.5rem auto;
+	margin-top: 0.7rem;
 }
-.li-info .s2 {
-	background:url(../images/s2.png) left center no-repeat; background-size:1.5rem auto;
+
+.icon-renzhengshangjia:before,
+.icon-time:before,
+.icon-yanjing:before {
+	position: absolute;
+	left: 0;
+	top: 0;
+ 	font-family: wafuli-iconfont;
+	margin-right: 0.2rem;
+	font-size: 1.4rem;
+	color: rgba(0,135,223,0.5);
+	-webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
 }
-.li-info .s3 {
-	background:url(../images/s3.png) left center no-repeat; background-size:1.4rem auto;
+.icon-renzhengshangjia:before {
+	content: "\e620";
+}
+.icon-time:before {
+	content: "\e628";
+}
+.icon-yanjing:before {
+	content: "\e601";
+	top: -0.1rem;
 }
