--- a/css/m_index.css
+++ b/css/m_index.css
@@ -79,7 +79,7 @@ header a img {
 }
 .nav-list .ic-02 {
 	font-size: 2.6rem;
-	padding-top: 0.7rem;
+	padding-top: 0.708rem;
 	background-color: #00d6b3;
 }
 .nav-list .ic-03 {
@@ -184,7 +184,7 @@ header a img {
 	border: 1px solid #e4e4e4;
 }
 .mui-table-view-cell .li-info {
-	width: 15rem;
+	width: 15.8rem;
 	float: right;
 	height: auto;
 }
@@ -199,12 +199,13 @@ header a img {
 	color: #222;
 }
 h6 + .iconfont {
+  position: absolute;
 	margin-left: 0.4rem;
-	font-size: 1.2rem;
+	font-size: 1.6rem;
 	color: #ff6767;
 }
 .li-info p {
-	line-height: 1.8rem;
+	line-height: 1.6rem;
 }
 .li-info p.first {
 	height: 1.8rem;
@@ -223,8 +224,10 @@ h6 + .iconfont {
 	border-radius: 4px;
 }
 .li-info span {
-	font-size: 1rem;
+	position: relative;
 	display: inline-block;
+	padding-left: 1.6rem;
+	font-size: 1rem;
 }
 
 .li-info .s2,
@@ -234,18 +237,23 @@ h6 + .iconfont {
 }
 .li-info .s3 {
 	float: left;
-	width: 10.5rem;
+	width: 12rem;
 }
 .li-info .s2 {
 	float: left;
 }
 .li-info .s1 {
-	margin-top: 0.5rem;
+	margin-top: 0.7rem;
 }
-.iconfont:before {
+.icon-renzhengshangjia:before,
+.icon-time:before,
+.icon-yanjing:before {
+	position: absolute;
+	left: 0;
+	top: 0;
  	font-family: wafuli-iconfont;
 	margin-right: 0.2rem;
-	font-size: 1rem;
+	font-size: 1.4rem;
 	color: rgba(0,135,223,0.5);
 	-webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
@@ -259,6 +267,7 @@ h6 + .iconfont {
 }
 .icon-yanjing:before {
 	content: "\e601";
+	top: -0.1rem;
 }
 /*底部导航部分*/
 footer {
@@ -275,8 +284,18 @@ footer li {
 }
 footer .iconfont {
 	font-size: 2.4rem;
-	line-height: 1.2;
+	line-height: 3rem;
 	color: #8f8f8f;
+}
+footer li:first-child .iconfont {
+	position: relative;
+	font-size: 2.2rem;
+	top: 0.2rem;
+}
+footer li:last-child .iconfont {
+	position: relative;
+	top: 0.2rem;
+	font-size: 2.8rem;
 }
 .on .iconfont {
 	color: #f08519;
