--- a/css/m_invite_accept.css
+++ b/css/m_invite_accept.css
@@ -1,68 +1,81 @@
-@font-face {  
-   font-family: "æµªæ¼«é›…åœ†";  
-   src: url("../fonts/æµªæ¼«é›…åœ†.ttf");  
-   font-weight: normal;  
-   font-style: normal;  
- }
+@font-face {
+	font-family: 'ÀËÂşÑÅÔ²';
+	src: url('../fonts/ÀËÂşÑÅÔ² .eot'); /* IE9 Compat Modes */
+	src: url('../fonts/ÀËÂşÑÅÔ² .eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+             url('../fonts/ÀËÂşÑÅÔ² .woff') format('woff'), /* Modern Browsers */
+             url('../fonts/ÀËÂşÑÅÔ² .ttf')  format('truetype'), /* Safari, Android, iOS */
+             url('../fonts/ÀËÂşÑÅÔ².svg#ÀËÂşÑÅÔ²') format('svg'); /* Legacy iOS */
+}
 body {
-	font-family: "æµªæ¼«é›…åœ†", Arial, sans-serif;
+	font-family: "ÀËÂşÑÅÔ²", Arial, sans-serif;
+	width: 100%;
+	height: 45rem;
 	background: #add8df;
 	color: #fff;
-	overflow-x: hidden;
-	overflow-y: scroll;
+	/*overflow-x: hidden;
+	overflow-y: scroll;*/
 	font-weight: 300;
-	padding-top: 2rem;
-	background: url(../images/invited-reg-bg.png) center -3rem no-repeat;
+	/*padding-top: 2rem;*/
+	background: url(../images/invited-reg-bg.png) center 0 no-repeat;
 	background-size: 100% auto;
+	background-color: #ffdb00;
 }
 .mui-content {
 	position: relative;
 	width: 100%;
-	height: 100%;
+	/*height: 45rem;*/
 	background-color: transparent;
 }
-.top-text {
-	text-align: center;
-	font-size: 1.2rem
-}
-.top-text p {
-	margin-top: 1rem;
-	color: #fff;
-}
+
 .mui-input-group {
-	margin-top: 6rem;
+	margin-top: 19rem;
 	background-color: transparent;
 }
 .mui-input-group .mui-input-row {
-	height: 4rem;
+	height: 3.6rem;
+	width: 64%;
+	/*margin-left: 18%;*/
+	margin: 0 auto;
 }
-.mui-input-row label {
-	padding-left: 0;
-	font-size: 2rem;
-	color: #5c3317;
-}
-.mui-input-row input,
-.mui-input-row p {
-	float: left !important;
-	padding: 0 10px !important;
-	width: 16rem !important; 
+
+.mui-input-row input {
 	text-align: center;
-	font-size: 2rem ;
-	line-height: 4rem;
-	height: 4rem;
+	font-size: 1.6rem ;
+	line-height: 3.6rem;
+	height: 3.6rem;
 	color: #5c3317;
 	background-color: #fff !important;
-	border: 1px solid #5c3317 !important;
-	border-radius: 1.5rem;
+	/*border: 1px solid #5c3317 !important;*/
+	border-radius: 2rem;
 }
-.bottom-btn {
-	position: absolute;
-	top: 46rem;
-	left: 6rem;
-	/*left: calc(50%-10rem);*/
+.mui-input-row span {
+	display: inline-block;
+	width: 30%;
+	float: left;
+	padding-left: 0;
+	font-size: 1.6rem;
+	line-height: 3.6rem;
+	color: #5c3317;
+}
+.mui-input-row p {
+	display: inline-block;
+	width: 70%; 
+	float: right;
+	text-align: center;
+	font-size: 1.6rem ;
+	line-height: 3.6rem;
+	height: 3.6rem;
+	color: #5c3317;
+	background-color: #fff !important;
+	/*border: 1px solid #5c3317 !important;*/
+	border-radius: 2rem;
+}
+.reg-btn {
+	margin: 2rem auto 0;
+	margin-top: 2rem;
 	display: block;
-	width: 20rem;
-	height: 4rem;
+	width: 64%;
+	height: 5rem;
 	text-align: center;
 	font-size: 2rem;
 	line-height: 4rem;
@@ -70,7 +83,14 @@ body {
 	background: url(../images/invited-reg-btn.png) center center no-repeat;
 	background-size: 100% auto;
 }
-/*æ ·å¼è¦†ç›–*/
+/*ÑùÊ½¸²¸Ç*/
+form {
+	width: 100%;
+	margin-left: 0;
+}
+.mui-input-group .mui-input-row {
+	margin-top: 1.6rem;
+}
 .mui-input-group .mui-input-row:after {
 	height: 0;
 }
