--- a/css/m_signin.css
+++ b/css/m_signin.css
@@ -1,4 +1,3 @@
-
 .mui-content {
   position: absolute;
   width: 100%;
@@ -15,7 +14,6 @@
 	margin-left: 1rem;
 	margin-right: 1rem;
 	width: 20%;
-	/*height: 4rem;*/
 }
 .msg .text {
 
@@ -78,18 +76,19 @@ footer {
 	bottom: 0;
 	padding: 1rem 0 0.4rem;
 	background: url(../images/juchi.png) top center;
-	/*background-size: 80%;*/
-	/*background-color: #14b1ff;*/
 	z-index: 1000;
-	/*border-top: 1px solid #e4e4e4;*/
 }
 footer li {
 	width: 33.3333%;
 	float: left;
 }
-footer li img {
-	width: 2.8rem;
-	height: auto;
+.iconfont {
+  font-size: 2.4rem;
+  line-height: 3rem;
+  color: #fff;
+}
+.ic-03 {
+  font-size: 3rem;
 }
 footer li span {
 	display: block;
