--- a/css/m_task.css
+++ b/css/m_task.css
@@ -1,59 +1,80 @@
-header {
-		background-color: #fff;
-		padding: 0 1.875% 0;
-		padding-bottom: 0.4rem;
-		background: #52c5ff;
+body {
+	background-color: #f2f2f2;
 }
-header img {
-	width: 20%;
-	margin-top: 0.6rem;
-}
-header a {
-	display: block;
-	width: 1.6rem;
-	height: 1.6rem;
-	margin-top: 1.2rem;
-}
-header a img {
-	width: 100%;
-	margin: 0;
-}
-/*提示消息部分*/
-.notice { float:left; width:100%; height:auto; box-sizing:border-box; padding:0 1.875%; background:#fff;margin-bottom: 0.6rem; box-shadow: 0 1px 3px #e4e4e4;}
-
-.qimo8{ overflow:hidden; float:left; width:94%; margin-left:1.5%;}
-.qimo8 .qimo {/*width:99999999px;*/width:8000%; height:2rem; line-height:2rem;}
-.qimo8 .qimo div{ float:left;}
-.qimo8 .qimo ul{float:left; height:2rem; overflow:hidden; zoom:1; }
-.qimo8 .qimo ul li{float:left; line-height:2rem; list-style:none; margin-right:5rem;}
-.qimo8 .qimo ul li span { font-size:1rem; color:#000000; line-height:2rem;}
-.qimo8 .qimo ul li i { font-size:1rem; color:#8c8c8c; line-height:2rem; margin-left:1rem;}
-.notice strong { /*float:right;*/ font-size:1rem; color:#ff6767;/* line-height:2rem;*/}
-.notice>img { float:left; width:1.3rem; height:1.3rem; margin-top:0.35rem;}
-
 /*选项卡部分*/
 
-.mui-table-view-cell {padding: 1rem 1.2rem;}
-.mui-segmented-control-inverted {
-	/*padding: 0 1.875% 0;*/
-	background-color: #fff;
+.mui-table-view-cell {
+	width: 30rem;
+	height: 7rem;
+	padding: 0;
+	margin: 0.8rem auto;
+	border-radius: 0.4rem;
+	background: #fff;
+	}
+.mui-table-view-cell a {
+	display: block;
+	margin: 0;
 }
-/*.mui-slider-indicator a:not(:last-child) {
-	border-right: 1px solid #e4e4e4 !important;
-}*/
-.mui-table-view-cell img {
+.mui-table-view-cell .img-box {
+	position: relative;
+	margin-top: 0.8rem;
 	float: left;
-	margin-left: 2rem;
-	/*margin-right: 16%;*/
-	width: 8rem !important;
-	border-radius:50%;
-	border:0.2rem solid #e4e4e4;
+	height: 5.4rem;
+	width: auto !important;
+	max-width: 8rem;
+	border-radius: 0.4rem;
+	overflow: hidden;
+}
+.mui-table-view-cell .img-box img {
+	width: auto !important;
+	max-width: 8rem;
+	height: 100%;
+}
+.mui-table-view-cell .info-middle {
+	float: right;
+	margin-top: 0.8rem;
+	padding-right: 0.4rem;
+	width: 12rem;
+	white-space: normal;
+}
+.info-middle h6 {
+	height: 3.6rem;
+	font-size: 1.2rem;
+	line-height: 1.5;
+	color: #222;
+	overflow: hidden;
+}
+.info-middle p {
+	font-size: 1rem;
+	line-height: 1.5;
+	margin-top: 0.4rem;
+}
+.info-middle p number {
+	color: #f08519;
+	font-weight: bold;
+}
+.mui-table-view-cell .info-right {
+	display: table;
+	float: right;
+	width: 7rem;
+	padding-left: 1.2rem;
+	font-size: 1rem;
+	height: 7rem;
+	color: #f08519;
+	background: url(../images/task-right-bg.png) left center/auto 100% no-repeat;
+}
+.mui-table-view-cell p.info-right.task-end {
+	color: #8f8f94;
+}
+.info-right span {
+	display: table-cell;
 	vertical-align: middle;
 }
-.mui-table-view-cell .li-info {
-	width: 49%;
-	float: right;
-	height: auto;
+.info-right b {
+	display: block;
+}
+.info-right number {
+	font-size: 1.6rem;
 }
 .li-info h6 {
 	font-size: 1.3rem;
@@ -68,15 +89,6 @@ header a img {
 }
 .li-info span.s1 {
 	margin-top: 0.8rem;
-}
-.li-info .s1 {
-	background:url(../images/s1.png) left center no-repeat; background-size:1.5rem auto;
-}
-.li-info .s2 {
-	background:url(../images/s2.png) left center no-repeat; background-size:1.5rem auto;
-}
-.li-info .s3 {
-	background:url(../images/s3.png) left center no-repeat; background-size:1.4rem auto;
 }
 
 .mui-slider .mui-segmented-control.mui-segmented-control-inverted~.mui-slider-group .mui-slider-item {
@@ -95,21 +107,38 @@ footer li {
 	width: 25%;
 	float: left;
 }
-footer li img {
-	width: 2.8rem;
-	height: auto;
+footer .iconfont {
+	font-size: 2.4rem;
+	line-height: 3rem;
+	color: #8f8f8f;
+}
+footer li:first-child .iconfont {
+	position: relative;
+	font-size: 2.2rem;
+	top: 0.2rem;
+}
+footer li:last-child .iconfont {
+	position: relative;
+	top: 0.2rem;
+	font-size: 2.8rem;
+}
+.on .iconfont {
+	color: #f08519;
 }
 footer li span {
 	display: block;
 	font-size: 1rem;
 	color: #4d4d4d;
 	margin-bottom: 3px;
-	margin-top: -3px;
+	margin-top: 3px;
 }
 footer li.on span {
 	color: #f08519;
 }
 /*样式替换*/
+.mui-segmented-control-inverted {
+	background-color: #fff;
+}
 .mui-slider .mui-slider-group .mui-slider-item>a:not(.mui-control-item) {
 	display: inline;
 }
@@ -118,9 +147,12 @@ footer li.on span {
 	text-align: center;
 }
 .mui-table-view-cell:after {
-	left: 1.875%;
-	right: 1.875%;
+	height: 0;
 }
-#task_slider{
-	bottom:20px;
+.mui-table-view-cell>a:not(.mui-btn) {
+	padding: 0 0.8rem;
+	margin: 0;
+}
+.mui-table-view {
+	background-color: #f2f2f2;
 }
