--- a/css/m_account_welfare.css
+++ b/css/m_account_welfare.css
@@ -1,7 +1,6 @@
 body {
 	background: #fff;
 }
-/*选项卡部分*/
 
 /*图标部分*/
 .icon {
@@ -50,7 +49,6 @@ body {
 	border-bottom: 1px solid #e4e4e4;
 }
 li.list span {
-	display:block;
 	float: left;
 	text-align: center;
 	font-size: 1rem;
@@ -60,15 +58,17 @@ li .li-01 {width: 30%;}
 li .li-02 {width: 25%;}
 li .li-03 {width: 25%;}
 li .li-04 {width: 20%;}
-
+.li-01 b {
+	display: inline-block;
+	line-height: 1.2;
+	vertical-align: middle;
+}
 li.head {
 	background-color: #00d6b3;
-	/*color: #333333;*/
 	border-radius: 0 0 0.8rem 0.8rem;
 }
 li.head-02 {
 	background-color: #52c5ff;
-	/*color: #333333;*/
 	border-radius: 0 0 0.8rem 0.8rem;
 }
 li.head span,
