--- a/css/m_signin.css
+++ b/css/m_signin.css
@@ -138,18 +138,15 @@ footer li span {
   bottom: 0;
 	z-index: 10000;
 	width: 100%;
-	/*height: 100%;*/
 	background: rgba(0,0,0,0.7);
 
 }
 .delete div {
-	position: relative;
+	position: absolute;
 	width: 80%;
 	height: 34rem;
 	margin-left: 10%;
-  top: 10%;
-	/*margin-top: 50%;*/
-	/*padding: 4rem 0;*/
+  top: 15%;
 	border-radius: 0.4rem;
 	overflow: hidden;
 	background: #fff;
