--- a/css/m_detail_taskandfinance.css
+++ b/css/m_detail_taskandfinance.css
@@ -2,10 +2,12 @@
 	padding-bottom: 6rem;
 }
 img {
-	width: 100%;
+	max-width: 100%;
 }
+.ad {text-align:center}
 .ad img {
-	width: 100%;
+	margin-top:20px;
+	width: 62%;
 	max-height: 21.2rem;
 }
 .ad h5 {
