--- a/css/m_account_withdraw.css
+++ b/css/m_account_withdraw.css
@@ -1,7 +1,3 @@
-.mui-content {
-	/*padding: 0 1.875% 2rem;*/
-
-}
 /*帐号部分*/
 .zhanghu {
 	padding: 2rem 0 1rem;
@@ -13,7 +9,6 @@
 	margin-left: 2rem;
 	margin-right: 1rem;
 	width: 20%;
-	/*height: 4rem;*/
 }
 .msg .text {
 	float: left;
@@ -41,7 +36,6 @@
 /*提现部分*/
 .mui-input-group {
 	background: #fff;
-/*	padding: 0 1.875% 0;*/
 
 }
 .mui-input-group:after {
@@ -55,10 +49,10 @@
 .mui-input-group .mui-input-row:after {
 	height: 0 ;
 }
-.mui-input-row label {
-	height: 95px;
-	width: 95px;
-	background: url(../images/fubi.png) center center/60% auto no-repeat;
+.fubi-icon {
+	display: block;
+	margin: 0 auto; 
+	width: 6rem;
 }
 .mui-input-row input {
 	height: 8rem !important;
