--- a/css/m_finance.css
+++ b/css/m_finance.css
@@ -151,7 +151,7 @@ footer li.on span {
 }
 .mui-table-view-cell {
 	padding: 0;
-	margin-bottom: 1rem;
+	margin-top: 1rem;
 	background: #fff;
 }
 .mui-table-view-cell>a:not(.mui-btn) {
