--- a/css/m_finance.css
+++ b/css/m_finance.css
@@ -61,9 +61,9 @@ header a img {
 	position: relative;
 	margin-top: 1rem;
 }
-.container>div span {
+.container>div .mark {
 	position: absolute;
-	left: 8rem;
+	left: 10rem;
 	bottom: 0;
 	width: 4rem;
 	color: #fff;
@@ -73,8 +73,8 @@ header a img {
 	padding: 2px 0;
 }
 .container img {
-	width: 12rem !important;
-	max-height: 8rem;
+	width: 14rem !important;
+	max-height: 9.4rem;
 	float: left;
 	border: 1px solid #ececec;
 }
@@ -83,7 +83,6 @@ header a img {
 	float: right;
 	width:13rem;
 	height: auto;
-	/*margin-top: 0.4rem;*/
 }
 .container .inc2 p {
 	font-size: 1.2rem;
