--- a/css/m_detail_finance.css
+++ b/css/m_detail_finance.css
@@ -70,13 +70,21 @@
 }
 .contact-qq {
 	display: inline-block;
-	margin: 2rem 1rem 2rem 0;
+	margin: 2rem 1rem;
 	padding: 0 1rem;
 	font-size: 1.2rem;
 	line-height: 2.4;
-	color: #333;
-	border: 1px solid #333;
+	color: #fff;
 	border-radius: 4px;
+	background-color: #52c5ff;
+}
+.contact-qq:active {
+	color: #fff;
+	background-color: #00a0ea;
+}
+.contact-qq:active {
+	color: #fff;
+	background-color: #00a0ea;
 }
 .taste h3, 
 .taste-02 h3,
