--- a/css/m_finance.css
+++ b/css/m_finance.css
@@ -46,11 +46,16 @@ header a img {
 	border-bottom: 2px solid #f3a156;
 }
 .mui-table-view-cell .title span {
+	height: 1.4rem;
 	display: inline-block;
-	float: right;
-	text-align: right;
-	font-size: 1.2rem;
-	color: #222;
+	padding: 0 4px;
+	color: #ff6767;
+	margin-left: 1rem;
+	font-size: 1rem;
+	line-height: 1.4rem;
+	text-align: center;
+	border: 1px solid #fb6767;
+	border-radius: 4px;
 }
 .mui-table-view-cell .title span font {
 	font-size: 1.4rem;
