--- a/css/m_detail_finance.css
+++ b/css/m_detail_finance.css
@@ -51,13 +51,31 @@
 }
 
 .info {
+	padding: 1rem 0;
 	margin-top: 1rem;
 	background-color: #fff;
+}
+.info p {
+	margin-top: 0.8rem;
+}
+.info p:first-child {
+	margin-top: 0;
+}
+.info span {
+	color: #333;
+	font-size: 1.2rem;
+	line-height: 2.4rem;
 }
 .info p span:first-child {
 	display: inline-block;
 	width: 140px;
 	margin-left: 20px;
+}
+.info p span:last-child {
+	display: inline-block;
+	padding: 0 1rem;
+	border-radius: 1.2rem;
+	background: #e4e4e4;
 }
 
 .taste,
