--- a/css/m_finance.css
+++ b/css/m_finance.css
@@ -53,7 +53,7 @@ header a img {
 	margin-left: 1rem;
 	font-size: 1rem;
 	line-height: 1.6rem;
-	background: #f08518;
+	background: #66cccc;
 	text-align: center;
 	border-radius: 2px;
 }
