account-index.css

--- a/css/m_account_index.css
+++ b/css/m_account_index.css
@@ -128,8 +128,8 @@
 }
 .icon-url i{
 	display: block;
-	color: #7a7d82;
-	font-size: 2.8rem;
+	color: #8f8f8f;
+	font-size: 2.6rem;
 	text-align: center;
 }
 .icon-url p {
