--- a/css/m_index.css
+++ b/css/m_index.css
@@ -384,7 +384,7 @@ footer li.on span {
 	color: #ff6767;
 }
 
-.mui-scroll-wrapper{
+/*.mui-scroll-wrapper{
 	bottom:20px;
 	/*margin-top:40px;*/
-}
+}*/
