--- a/css/m_detail_taskandfinance.css
+++ b/css/m_detail_taskandfinance.css
@@ -93,6 +93,7 @@ p {
 	font-size: 16px !important;
 	line-height: 2;
 	color: #333;
+	word-wrap: break-word;
 }
 strong {
 	font-weight: bold !important;
