--- a/css/m_account_zhifubao.css
+++ b/css/m_account_zhifubao.css
@@ -45,3 +45,9 @@ form {
 	padding-left: 0;
 	text-align: center;
 }
+.tishi {
+	margin-top: 10px;
+	margin-left: 4%;
+	font-size: 12px;
+	color: #a5a5a5;
+}
