--- a/css/m_activity_lottery.css
+++ b/css/m_activity_lottery.css
@@ -64,8 +64,14 @@ body {
 	width: 9rem;
 	height: 12rem;
 }
+.tips {
+	margin-top: 10rem;
+	/*margin-left: 5%;*/
+	text-align: center;
+	color: #f08519;
+}
 .top .text {
-	margin-top: 13rem;
+	margin-top: 1rem;
 }
 .top .text h4 {
 	font-size: 1.6rem;
