--- a/css/m_account_withdraw.css
+++ b/css/m_account_withdraw.css
@@ -1,7 +1,7 @@
 /*帐号部分*/
 .zhanghu {
 	padding: 2rem 0 1rem;
-	background: #fff;
+	background: #008fd7;
 	box-shadow: 0 1px 3px #e4e4e4;
 }
 .msg img {
@@ -9,10 +9,13 @@
 	margin-left: 2rem;
 	margin-right: 1rem;
 	width: 20%;
+	border-radius: 50%;
+	/*height: 4rem;*/
 }
 .msg .text {
 	float: left;
-	margin-top: 1rem;
+	margin-top: 0.5rem;
+	margin-left: 2rem;
 }
 .text p {
 		font-size: 1.2rem;
@@ -20,8 +23,11 @@
 		line-height: 2rem;
 }
 .text p span {
-	color: #8f8f8f;
-	font-size: 1.2rem;
+	color: #fff;
+	font-size: 1.4rem;
+}
+.text a {
+	color: #fff;
 }
 
 .right {
