--- a/css/m_finance.css
+++ b/css/m_finance.css
@@ -1,31 +1,7 @@
-header {
-		position: fixed;
-		top: 0;
-		width: 100%;
-		height: 4rem;
-		background-color: #fff;
-		padding: 0 1.875% 0;
-		padding-bottom: 0.4rem;
-		background: #52c5ff;
-		display: none;
-}
-header>img {
-	height: 2rem;
-	margin-top: 1rem;
-}
-header a {
-	display: block;
-	width: 1.6rem;
-	height: 1.6rem;
-	margin-top: 1.7rem;
-}
-header a img {
-
-	width: 100%;
-	margin: 0;
-}
 /*选项卡部分*/
-
+.to-finance,.to-finance img {
+	display: block;
+}
 .mui-table-view-cell {padding: 1rem 1.2rem 1.2rem;}
 .mui-segmented-control-inverted {
 	background-color: #fff;
@@ -142,7 +118,7 @@ footer li.on span {
 }
 .mui-table-view-cell {
 	padding: 0;
-	margin-top: 1rem;
+	margin-bottom: 1rem;
 	background: #fff;
 }
 .mui-table-view-cell>a:not(.mui-btn) {
