--- a/css/m_detail_hongbao.css
+++ b/css/m_detail_hongbao.css
@@ -7,11 +7,16 @@ body {
 table,img {
 	max-width: 100%;
 }
-.ad {text-align:center}
+.ad {
+    padding: 20px 0;
+    background-color: #fff;
+    text-align: center;
+}
 .ad img {
-	margin-top:20px;
-	width: 62%;
-	text-align: center;
+	display: block;
+    margin: 0 auto;
+    height: 150px;
+    width: auto;
 }
 /*体验步骤部分*/
 .taste,
@@ -45,7 +50,37 @@ table,img {
 	color: #f29840;
 	line-height: 2rem;;
 }
-
+/*点赞部分*/
+.support {
+    padding: 20px;
+    background-color: #fff;
+    text-align: center;
+}
+.support__up,
+.support__down {
+    display: inline-block;
+    padding-left: 30px;
+    width: 80px;
+    line-height: 30px;
+    border-radius: 15px;
+    font-size: 12px;
+}
+.support__up {
+    border: 1px solid #f08519;
+    background: url(../images/support-up.png) 20px center/16px auto no-repeat;
+}
+.support__up.on {
+    background-image: url(../images/support-up-on.png);
+}
+.support__down {
+    margin-left: 50px;
+    border: 1px solid #777;
+    background: url(../images/support-down.png) 20px center/16px auto no-repeat;
+}
+.support__down.on {
+    background-image: url(../images/support-down-on.png);
+}
+/*点赞部分---end*/
 /*立即体验部分*/
 .try {
 	position: fixed;
