--- a/css/m_detail_hongbao.css
+++ b/css/m_detail_hongbao.css
@@ -61,6 +61,7 @@ table,img {
     display: inline-block;
     padding-left: 30px;
     width: 80px;
+    height: 30px;
     line-height: 30px;
     border-radius: 15px;
     font-size: 12px;
