--- a/css/m_activity_Christmas.css
+++ b/css/m_activity_Christmas.css
@@ -1,13 +1,3 @@
-/*@font-face {
-	font-family: "浪漫雅圆";
-	src: url('../fonts/浪漫雅圆.ttf') format('truetype');
-
-}
-
-@font-face {
-	font-family: "迷你简汉真广标";
-	src: url('../fonts/迷你简汉真广标.ttf') format('truetype');
-}*/
 body {
 	width: 100%;
 	*cursor: default;
@@ -104,32 +94,6 @@ body {
 
 
 /*页面元素*/
-.section1 .contain h1 {
-	padding-top: 15rem;
-	margin: 0 0 0.2rem -3.6rem;
-	font-size: 5rem;
-	font-family: "迷你简汉真广标";
-	color: #fd0300;
-	text-align: center;
-	animation: toBottom 1s ease-in-out;
-}
-
-.section1 .contain .title-after {
-	position: relative;
-	width: 100%;
-	height: 10rem;
-	background: url(../images/act-task-bg-hb.png) 82% center/auto 100% no-repeat;
-	z-index: 2;
-}
-
-.section1 .contain h3 {
-	margin-top: -2.2rem;
-	font-size: 2.6rem;
-	font-family: "迷你简汉真广标";
-	color: #f0cf06;
-	text-align: center;
-}
-
 .contain h2 {
 	margin: 0 auto;
 	padding-top: 2.8rem;
@@ -174,7 +138,7 @@ body {
 }
 
 .contain p.first-text {
-	margin: 60% auto 0;
+	margin: 70% auto 0;
 	text-align: center;
 }
 
@@ -201,32 +165,32 @@ body {
 }
 /*头部页面*/
 .section1 .contain {
-	background: url(../images/act-center-00.png) center 98%/94% auto no-repeat, url(../images/act-task-bg.png) center center/100% 100% no-repeat, url(../images/act-task-bg-top.png) 40% -2%/50% auto no-repeat;
-	background-color: #fff;
+    background: url(../images/act-bg-txt.png) center 30%/94% auto no-repeat, url(../images/act-bg-bottom.png) center bottom/100% auto no-repeat, url(../images/act-bg-top.png) top center/100% auto no-repeat;
+    background-color: #fefbdc;
 }
 
 .section2 .contain {
-	background: url(../images/act-center-01.png) center 46%/auto 40% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
+	background: url(../images/act-center-01.png) center 40%/auto 30% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
 	background-color: #f3c82c;
 }
 
 .section3 .contain {
-	background: url(../images/act-center-03.png) center 46%/auto 40% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
+	background: url(../images/act-center-03.png) center 40%/auto 30% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
 	background-color: #ff9024;
 }
 
 .section4 .contain {
-	background: url(../images/act-center-04.png) center 46%/auto 36% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
+	background: url(../images/act-center-04.png) center 40%/auto 30% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
 	background-color: #ff596d;
 }
 
 .section5 .contain {
-	background: url(../images/act-center-05.png) center 46%/auto 36% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
+	background: url(../images/act-center-05.png) center 40%/auto 30% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
 	background-color: #dd903e;
 }
 
 .section6 .contain {
-	background: url(../images/act-center-02.png) center 46%/auto 36% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
+	background: url(../images/act-center-02.png) center 40%/auto 30% no-repeat, url(../images/act-task-bg-all.png) center center/100% 100% no-repeat;
 	background-color: #e64c42;
 }
 .section7 .contain {
