--- a/css/m_audit.css
+++ b/css/m_audit.css
@@ -65,11 +65,12 @@ ul,li {
 	font-size: 12px;
 }
 .column_0 {
-    width: 20%;
+    width: 0%;
+    display: none;
     font-size: 12px;
 }
 .column_1 {
-	width: 80%;
+    width: 100%;
 }
 
 .column_2 {
@@ -251,19 +252,22 @@ ul,li {
 }
 /*弹窗部分---end*/
 .mui-plus-pullrefresh .mui-scroll-wrapper {
-    position: absolute;
+    /*position: absolute;
     top: 84px;
     bottom: 0;
     left: 0;
     z-index: 2;
     width: 100%;
-    overflow: hidden;
+    overflow: hidden;*/
+   margin-top: 84px;
 }
 .nav__head {
     position: fixed;
     top: 44px;
     width: 100%;
     font-size: 0;
+    z-index: 1000;
+    background-color: #efeff4;
 }
 .nav__item {
     display: inline-block;
@@ -276,13 +280,16 @@ ul,li {
 
 }
 .nav__item.on {
-    color: #91C11D;
+    color: #008fd7;
 }
 .nav__link {
     display: block;
     color: #333;
 }
 .m-head{
-    background: RGB(145,193,29);
+    background: #008fd7;
     color: white;
+}
+.mui-bar {
+    z-index: 1000;
 }
