--- a/css/m_account_index.css
+++ b/css/m_account_index.css
@@ -30,6 +30,16 @@
 	border: 2px solid #fff;
 	border-radius: 50%;
 }
+.vip-level {
+    display: inline-block;
+    margin-left: 6px;
+    padding: 0 4px;
+    font-size: 12px;
+    line-height: 16px;
+    background-color: #ffbe00;
+    border-radius: 4px;
+    vertical-align: middle;
+}
 .top a {
 	display: block;
 	text-align: center;
